# PixelCanvas

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile.backend  README.md  docker-compose.yml  load_test_results.md
.devcontainer/: Dockerfile  devcontainer.json
init-db/: 01_init.sql
nginx/: nginx.conf
src/: DBManager.cpp  DBManager.hpp  RedisManager.cpp  RedisManager.hpp  main.cpp
static/: app.js  index.html  style.css
tests/: loadtest-results.md  loadtest.js
tests/results/: results_1.txt  results_2.txt  results_3.txt  results_extreme_high_load.txt  results_high_load.txt
